# equation

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  widget.cpp  widget.hpp
